[gd_scene load_steps=17 format=3 uid="uid://35awc5841fwy"]

[ext_resource type="PackedScene" uid="uid://gvm0me264r32" path="res://assets/graphics/meshes/starter_assets/disguise-glasses.glb" id="1_gnbc5"]
[ext_resource type="Script" uid="uid://dvxng0y08o03h" path="res://scripts/controller/FPSController.gd" id="1_qjb0n"]
[ext_resource type="Material" uid="uid://du7ffw2d2n8so" path="res://assets/graphics/materials/checkerboard2_mat.tres" id="2_qwrqx"]
[ext_resource type="Script" uid="uid://d1sttdnoishl8" path="res://scripts/controller/CenterDot.gd" id="4_oxabm"]
[ext_resource type="Theme" uid="uid://dbxh4c7yj706u" path="res://assets/graphics/ui/themes/debug.tres" id="5_jemsa"]
[ext_resource type="Script" uid="uid://dpy14e14hel55" path="res://scripts/Debug.gd" id="6_ephn5"]
[ext_resource type="Script" uid="uid://dh5po65q44kak" path="res://scripts/controller/state machine/StateMachine.gd" id="7_a6ktj"]
[ext_resource type="Script" uid="uid://c1mdy7adp7yyp" path="res://scripts/controller/state machine/states/IdlePlayerState.gd" id="8_3hwvd"]
[ext_resource type="Script" uid="uid://dsqo253uphorw" path="res://scripts/controller/state machine/states/WalkingPlayerState.gd" id="9_4ymv7"]
[ext_resource type="Script" uid="uid://3qcbfy6bfukr" path="res://scripts/controller/state machine/states/SprintingPlayerState.gd" id="10_4ymv7"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_6vnn4"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_6vnn4"]
material = ExtResource("2_qwrqx")

[sub_resource type="Animation" id="Animation_qwrqx"]
resource_name = "Crouch"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1, 0), Vector3(0, 0.75, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.79, 0), Vector3(0, 1.15, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WorldModel/MeshInstance3D:mesh:height")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [2.0, 1.5]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("WorldModel/MeshInstance3D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1, 0), Vector3(0, 0.75, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("WorldModel/disguise-glasses:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 1.36, -0.237), Vector3(0, 0.83, -0.237)]
}

[sub_resource type="Animation" id="Animation_oxabm"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CollisionShape3D:shape:height")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape3D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Head:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.79, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("WorldModel/MeshInstance3D:mesh:height")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("WorldModel/MeshInstance3D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("WorldModel/disguise-glasses:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 1.36, -0.237)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oxabm"]
_data = {
&"Crouch": SubResource("Animation_qwrqx"),
&"RESET": SubResource("Animation_oxabm")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_qwrqx"]
radius = 0.45

[node name="CharacterBody3D" type="CharacterBody3D" node_paths=PackedStringArray("animation_player", "crouch_shapecast")]
script = ExtResource("1_qjb0n")
animation_player = NodePath("AnimationPlayer")
crouch_shapecast = NodePath("ShapeCast3D")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_6vnn4")

[node name="WorldModel" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="WorldModel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_6vnn4")

[node name="disguise-glasses" parent="WorldModel" instance=ExtResource("1_gnbc5")]
transform = Transform3D(-2, 0, -2.01277e-07, 0, 2, 0, 3.01992e-07, 0, -1.333, 0, 1.36, -0.237)

[node name="Head" type="Node3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.79, 0)

[node name="Camera3D" type="Camera3D" parent="Head"]
unique_name_in_owner = true
cull_mask = 1048573

[node name="ReflectionProbe" type="ReflectionProbe" parent="Head/Camera3D"]
visible = false
update_mode = 1
enable_shadows = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_oxabm")
}

[node name="ShapeCast3D" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)
shape = SubResource("SphereShape3D_qwrqx")
target_position = Vector3(0, 0.5, 0)
debug_shape_custom_color = Color(0, 1, 0, 1)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="CenterDot" type="CenterContainer" parent="UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_oxabm")

[node name="DebugPanel" type="PanelContainer" parent="UI"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 210.0
offset_bottom = 50.0
theme = ExtResource("5_jemsa")
script = ExtResource("6_ephn5")

[node name="MarginContainer" type="MarginContainer" parent="UI/DebugPanel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/DebugPanel/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="PlayerStateMachine" type="Node" parent="." node_paths=PackedStringArray("current_state")]
script = ExtResource("7_a6ktj")
current_state = NodePath("IdlePlayerState")

[node name="IdlePlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("8_3hwvd")

[node name="WalkingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("9_4ymv7")

[node name="SprintingPlayerState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("10_4ymv7")

[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_animation_player_animation_started"]
